--- a/react-demo/package.json
+++ b/react-demo/package.json
@@ -4,12 +4,15 @@
   "private": true,
   "dependencies": {
     "@firebase/storage": "^0.3.33",
+    "@fluentui/react": "^7.114.2",
     "@material-ui/core": "^4.9.14",
     "@material-ui/icons": "^4.9.1",
+    "@material-ui/lab": "^4.0.0-alpha.53",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "bootstrap": "^4.1.1",
+    "firebase": "^7.14.4",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
